--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,9 @@
   apt_repository:
     repo: ppa:jcfp/nobetas
     state: present
+    repo: ppa:jcfp/sab-addons
+    state: present
+
 
 - name: Install Sabnzbd
   package:
@@ -12,12 +15,13 @@
      state: present
   with_items:
      - sabnzbdplus
+     - python-sabyenc
 
 - name: Create Sabnzbd directory
   file: path={{ sabnzbd_path }} owner={{ htpc_user_username }} group={{ htpc_user_group }} state=directory mode=0755
 
 - name: Create Sabnzbd Incomplete downloads folders
-  file: path={{ item }} state=directory owner={{ htpc_user_username }} group={{ htpc_user_group }} mode=0775 recurse=yes
+  file: path={{ item }} state=directory owner={{ htpc_user_username }} group={{ htpc_user_group }} mode=0777 recurse=yes
   with_items:
     - "{{ sabnzbd_incomplete }}"
 
