--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,3 +20,12 @@ sabnzbd_host: "{{ ansible_default_ipv4.address }}"
 sabnzbd_port: 9000
 
 sabnzbd_host_whitelist: sabnzbd, sabnzbd.int.sambaum.ch # comma separated list: host1, host2 // https://sabnzbd.org/wiki/extra/hostname-check.html
+
+newsgroups_servers: []
+#  - name: host.example.con
+#    username: 000000123
+#    password: "setPasswordAndStoreInVault"
+#    connections: 20
+#    ssl: 1
+#    port: 119
+#    priority: 0
